📦 NEW: Creando tus propias utilerias

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17878,6 +17878,18 @@ video {
   transition-delay: 1000ms;
 }
 
+.rotate-45 {
+  transform: rotate(45deg);
+}
+
+.zoom {
+  transform: scale(2);
+}
+
+.hover\:zoom:hover {
+  transform: scale(2);
+}
+
 @media (min-width: 640px) {
   .sm\:space-y-0 > :not(template) ~ :not(template) {
     --space-y-reverse: 0;
@@ -35136,6 +35148,10 @@ video {
 
   .sm\:delay-1000 {
     transition-delay: 1000ms;
+  }
+
+  .sm\:rotate-45 {
+    transform: rotate(45deg);
   }
 }
 
@@ -52398,6 +52414,10 @@ video {
   .md\:delay-1000 {
     transition-delay: 1000ms;
   }
+
+  .md\:rotate-45 {
+    transform: rotate(45deg);
+  }
 }
 
 @media (min-width: 1024px) {
@@ -69659,6 +69679,10 @@ video {
   .lg\:delay-1000 {
     transition-delay: 1000ms;
   }
+
+  .lg\:rotate-45 {
+    transform: rotate(45deg);
+  }
 }
 
 @media (min-width: 1280px) {
@@ -86919,5 +86943,9 @@ video {
 
   .xl\:delay-1000 {
     transition-delay: 1000ms;
+  }
+
+  .xl\:rotate-45 {
+    transform: rotate(45deg);
   }
 }
